@@ -13,6 +13,10 @@ MIDIboxSEQ V4.081
 
    o fixed synchronisation issue in Song mode
 
+   o Options in LIVE page are now stored in session specific MBSEQ_C.V4 file
+
+   o initial release for MBHP_CORE_STM32F4
+
 
 MIDIboxSEQ V4.080
 ~~~~~~~~~~~~~~~~~
